--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,12 @@ canvas {
     height: 300px;
     border: 2px solid #000000;
 }
+footer {
+    background-color: #ca5050;
+    color: white;
+    width: 100%;
+    position: fixed;
+    bottom: 0px;
+    text-align: center;
+    padding: 20px;
+}
